--- a/MAILab/Resource.resx
+++ b/MAILab/Resource.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="No" xml:space="preserve">
-    <value>Нет</value>
+    <value>-</value>
   </data>
   <data name="Yes" xml:space="preserve">
-    <value>Да</value>
+    <value>+</value>
   </data>
 </root>
